<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="turn_x">Turn X</string>
    <string name="newGame">Reset</string>
    <string name="a1"></string>
    <string name="a2"></string>
    <string name="a3"></string>

    <string name="b1"></string>
    <string name="b2"></string>
    <string name="b3"></string>

    <string name="c1"></string>
    <string name="c2"></string>
    <string name="c3"></string>


</resources>