<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/turnTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_x"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="visible">

            <Button
                android:id="@+id/a1"
                style="@style/column"
                android:contentDescription="@string/a1"
                android:shadowColor="#9C27B0"
                android:text="@string/a2"
                app:backgroundTint="#FCF6F5FF"
                app:strokeColor="#9C27B0"
                tools:ignore="SpeakableTextPresentCheck" />


            <Button
                android:id="@+id/a2"
                style="@style/column"
                android:contentDescription="@string/a2"
                android:text="@string/a2"
                app:backgroundTint="#FCF6F5FF"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/a3"
                style="@style/column"
                android:text="@string/a3"
                app:backgroundTint="#FCF6F5FF"
                tools:ignore="SpeakableTextPresentCheck" />

        </TableRow>

        <TableRow android:visibility="visible">

            <Button
                android:id="@+id/b1"
                style="@style/column"
                android:contentDescription="@string/b1"
                android:text="@string/b1"
                app:backgroundTint="#FCF6F5FF"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/b2"
                style="@style/column"
                android:text="@string/b2"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/b3"
                style="@style/column"
                android:text="@string/b3"
                app:backgroundTint="#FCF6F5FF"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow android:visibility="visible">

            <Button
                android:id="@+id/c1"
                style="@style/column"
                android:text="@string/c1"
                app:backgroundTint="#FCF6F5FF"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/c2"
                style="@style/column"
                android:text="@string/c2"
                app:backgroundTint="#FCF6F5FF"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/c3"
                style="@style/column"
                android:text="@string/c3"
                app:backgroundTint="#FCF6F5FF"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

</androidx.constraintlayout.widget.ConstraintLayout>